# specsEBE

./: CMakeLists.txt  Makefile
configure/: RELEASE  RELEASE.linux-x86_64
ebeApp/Db/: Makefile  ebe.template  ebe4.substitutions  ebePocket.template
ebeApp/opi/edl/: ebe4.edl  ebeAdvanced.edl
ebeApp/opi/opi/: ebe4.opi  ebeAdvanced.opi
ebeApp/protocol/: Makefile  ebe4.proto
ebeApp/src/: Makefile  ebeMain.cpp
etc/: builder.py  module.ini
etc/makeIocs/: example.xml
etc/sim/: README.txt
etc/sim/ebe/: __init__.py  app.py  ebeclient.py  ebesim.py  simapp.py  testebeclient.py
iocs/: Makefile
